<resources>
    <string name="app_name">Travel App</string>

    <string name="slide1_title">Track your travels</string>
    <string name="slide1_desc">Organize your personal trips easily!</string>

    <string name="slide2_title">Add sites to visit</string>
    <string name="slide2_desc">Including restaurants, museums, etc!</string>

    <string name="slide3_title">Share with your Friends</string>
    <string name="slide3_desc">Let others see your travels!</string>

    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="register_button">Start</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="login_button">Login</string>
    <string name="nameInput">Name</string>
    <string name="password">Password</string>
    <string name="no_account">Dont have an account? Create one</string>
    <string name="register_success">Registration successful!</string>
    <string name="login_success">Login successful!</string>
    <string name="fill_all_fields">Please fill in all fields.</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="profile"></string>
    <string name="welcome"></string>
    <string name="my_trips">Travel+</string>
    <string name="no_trips">As minhas mensagens</string>
    <string name="subtitle_text">As minhas mensagens</string>
    <string name="data_updated">Dados atualizados com sucesso</string>
    <string name="button_edit">Edit</string>

    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="back">Voltar</string>
    <string name="profile_image">Imagem de perfil</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>

    <string name="register_trip">Add Trip</string>
    <string name="share_trip">Share Trip</string>
    <string name="profile1">Profile</string>


</resources>

