<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#1E1E1E"
    >

    <!-- Botão Voltar -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back"
        android:layout_gravity="start"
        android:padding="4dp" />

    <!-- Imagem de Perfil -->
    <ImageView
        android:id="@+id/profileImageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@drawable/person"
        android:background="@drawable/box"
        android:padding="8dp"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        />

    <!-- Nome -->
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:textColor="#FFFFFF"
        />

    <!-- Email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        />

    <!-- Password -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        />

    <!-- Botão Editar/Guardar -->
    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:backgroundTint="#007AFF"
        android:layout_marginTop="24dp" />
</LinearLayout>
