<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1C1C1E"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:text="@string/register_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/nameInput"
            android:hint="@string/nameInput"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#BBBBBB"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/emailInput"
            android:hint="Email"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#BBBBBB"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="#FFFFFF"
            android:textColorHint="#BBBBBB"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/registerButton"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:backgroundTint="#007AFF"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>

