<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E">

    <!-- Conteúdo fixo no topo -->
    <LinearLayout
        android:id="@+id/content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:background="@drawable/rounded_button"
            android:src="@drawable/person"
            android:contentDescription="@string/profile" />

        <TextView
            android:id="@+id/trips_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_trips"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/subtitle_text"
            android:textColor="#CCCCCC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/empty_trips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:padding="20dp"
            android:background="@drawable/rounded_box"
            android:text="@string/no_trips"
            android:textColor="#000000"
            android:gravity="center" />
    </LinearLayout>

    <!-- Fragmento ocupa o espaço entre o conteúdo e a bottom nav -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/content_wrapper"
        android:layout_above="@id/bottom_nav"
        app:defaultNavHost="true"
         />

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
       android:color ="#000000"
        app:menu="@menu/bottom_nav_menu"/>

</RelativeLayout>
